tools/observability/otel-collector/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: otel-collector
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`otel.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: otel-collector-opentelemetry-collector
          port: 4318
          namespace: observability
  tls: 
    certResolver: le
